--- a/AssignmentForSnippetCompletion.ipynb
+++ b/AssignmentForSnippetCompletion.ipynb
@@ -71,7 +71,7 @@
     "    #Look at Python's Conciseness!\n",
     "    \n",
     "    line = line.replace(\".\",\"\").replace(\",\",\"\").replace('?','').replace('!','').replace('[','').replace(']','')\\\n",
-    "    .replace('(','').replace(')','').replace('%','').replace('/','')\n",
+    "    .replace('(','').replace(')','').replace('%','').replace('/','').rstrip()\n",
     "      \n",
     "    #COMPLETE THE CODE FROM HERE:\n",
     "    \n",
